[gd_scene load_steps=7 format=3 uid="uid://did7g6thjvjht"]

[ext_resource type="Script" path="res://scripts/collision_hint.gd" id="1_go84p"]
[ext_resource type="Texture2D" uid="uid://bp2tx35xpw0oa" path="res://texture/Fall (36x36).png" id="1_jbvy1"]
[ext_resource type="PackedScene" uid="uid://xu0gj2jig4cv" path="res://textboxes/textBox.tscn" id="3_4wo3j"]
[ext_resource type="Script" path="res://scene/area_2d.gd" id="4_w7yci"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrwsi"]
size = Vector2(77, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_w2ysw"]
radius = 32.3883

[node name="StaticBody" type="StaticBody2D" groups=["chara_with_hint"]]
y_sort_enabled = true
position = Vector2(0, -10)
script = ExtResource("1_go84p")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["chara_with_hint"]]
scale = Vector2(2.54861, 2.47788)
texture = ExtResource("1_jbvy1")
offset = Vector2(0, -8)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." groups=["chara_with_hint"]]
texture_filter = 1
position = Vector2(-2.5, 1)
shape = SubResource("RectangleShape2D_hrwsi")

[node name="Area2D" type="Area2D" parent="."]
input_pickable = false
script = ExtResource("4_w7yci")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_w2ysw")

[node name="TextBox" parent="." groups=["chara_with_hint"] instance=ExtResource("3_4wo3j")]
offset_left = 23.0
offset_top = -107.0
offset_right = 98.0
offset_bottom = -62.0
script = null

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = -108.0
offset_top = -101.0
offset_right = -76.0
offset_bottom = -81.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
